--- a/landing_page/css/style.css
+++ b/landing_page/css/style.css
@@ -1,12 +1,688 @@
 :root {
     --primeira-color: #FF7700;
     --secundaria-color: #F59E0B;
-    --terciaria-color: #40426F;
-    --quarta-color: #1A1D58;
+    --terciaria-color: #40426f3b;
+    --quarta-color: #1a1d58;
     --quinta-color: #FFFFFF;
     --sexta-color: #F4F4F4;
-    --setima-color: #D9D9D9;
+    --setima-color: #d9d9d9;
     --oitava-color: #60628F;
     --nona--color: #5A5C80;
     --decima--color: #54556C;
+}
+
+/*Design para Desktop*/
+
+html {
+    scroll-behavior: smooth;
+    /* Isso faz com que a rolagem para âncoras seja suave */
+}
+
+body {
+    background-color: var(--quarta-color);
+}
+
+button {
+    transition: transform .1s;
+}
+
+button:active {
+    transform: scale(0.95);
+}
+
+/*Header*/
+
+.header {
+    position: sticky;
+    top: 0;
+    z-index: 999;
+}
+
+nav {
+    background-color: var(--quarta-color);
+    height: 100px;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    padding: 0 4vw;
+}
+
+nav a {
+    font-family: Cinzel, sans-serif;
+    border: none;
+    background-color: transparent;
+    color: var(--quinta-color);
+    text-decoration: none;
+    cursor: pointer;
+    display: flex;
+    align-items: center;
+    margin: 0 3vw;
+    height: 100%;
+
+}
+
+nav a.empresa {
+    font-size: 30px;
+    color: var(--primeira-color);
+    margin-right: auto;
+}
+
+.empresa span {
+    margin-left: 10px;
+}
+
+nav a.contaquitar {
+    color: #353438;
+    background-color: var(--primeira-color);
+    height: 50px;
+    width: 300px;
+    border-radius: 10px;
+    justify-content: center;
+    margin-left: 2vw;
+}
+
+/*Página principal*/
+
+.principal {
+    height: auto;
+    width: 100%;
+    position: relative;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-direction: column;
+}
+
+.fundo {
+    z-index: -999;
+    opacity: 20%;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    width: 95%;
+    height: auto;
+    transform: translate(-50%, -50%);
+}
+
+.principal h1 {
+    font-weight: 300;
+    font-size: 70px;
+    font-family: Cinzel, sans-serif;
+    color: var(--secundaria-color);
+}
+
+.principal .branco {
+    color: var(--quinta-color);
+    margin-top: 10vh;
+}
+
+.principal .laranja {
+    color: var(--primeira-color);
+}
+
+.text-center {
+    font-family: Inter, sans-serif;
+    text-align: center;
+    color: var(--quinta-color);
+    opacity: 20%;
+}
+
+.button button {
+    margin: 30px;
+    height: 50px;
+    width: 300px;
+    border-radius: 10px;
+}
+
+.botão1 {
+    font-family: Cinzel, sans-serif;
+    background-color: var(--primeira-color);
+    border: none;
+}
+
+.botão2 {
+    background-color: transparent;
+    color: var(--quinta-color);
+    font-family: Inter, sans-serif;
+    border: 2px solid white;
+}
+
+.container {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    width: 85vw;
+    margin-top: 50px;
+}
+
+.text-left {
+    color: var(--quinta-color);
+    font-family: Cinzel, sans-serif;
+    margin-right: 10vw;
+}
+
+.text-left h2 {
+    font-size: 35px;
+    font-weight: 300;
+}
+
+.text-left p {
+    margin-top: 20px;
+    margin-bottom: 20px;
+}
+
+.text-left span {
+    font-size: 15px;
+}
+
+.app {
+    height: 350px;
+}
+
+/*Parcerias*/
+
+.parcerias {
+    margin-top: 6%;
+    height: 230px;
+    font-family: Inter, sans-serif;
+    background-color: var(--terciaria-color);
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
+
+.parcerias h2 {
+    font-weight: 500;
+    color: var(--quinta-color);
+    opacity: 38%;
+}
+
+.parceiros img {
+    margin: 20px;
+}
+
+/*Operacões*/
+
+.operações {
+    font-family: Inter, sans-serif;
+    height: 480px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-direction: column;
+    color: var(--quinta-color);
+}
+
+.gap {
+    margin-top: 30px;
+}
+
+.operações h2 {
+    font-weight: 500;
+    margin-top: 20px;
+}
+
+.subtitulo {
+    opacity: 50%;
+}
+
+.caixa {
+    margin-top: 30px;
+    display: flex;
+}
+
+.destaques {
+    margin: 20px;
+    text-align: center;
+    border-radius: 20px;
+    background-color: #40426f6b;
+    height: 250px;
+    width: 400px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    transition: .2s;
+}
+
+.destaques:hover {
+    background-color: #40426fda;
+    transform: scale(1.05);
+}
+
+.destaques h2 {
+    margin-top: 20px;
+    margin-bottom: 10px;
+}
+
+.circulo {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    height: 60px;
+    width: 60px;
+    background-color: var(--setima-color);
+    border-radius: 50%;
+}
+
+.circulo img {
+    height: 45px;
+    width: 45px;
+}
+
+/*Planos*/
+
+.planos {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    background-color: var(--terciaria-color);
+    padding: 70px 0;
+    font-family: Inter, sans-serif;
+}
+
+.toggle-wrapper {
+    display: flex;
+    align-items: center;
+    font-family: Inter, sans-serif;
+    color: var(--quinta-color);
+    font-size: 25px;
+    margin-bottom: 5vh;
+    gap: 15px;
+}
+
+.switch {
+    position: relative;
+    display: inline-block;
+    width: 90px;
+    height: 40px;
+}
+
+.switch input {
+    opacity: 0;
+    width: 0;
+    height: 0;
+}
+
+.slider {
+    position: absolute;
+    cursor: pointer;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    background-color: #ff9100;
+    transition: .4s;
+    border-radius: 34px;
+}
+
+.slider:before {
+    position: absolute;
+    content: "";
+    height: 34px;
+    width: 34px;
+    left: 4px;
+    bottom: 3px;
+    background-color: #353438;
+    transition: .4s;
+    border-radius: 50%;
+}
+
+input:checked+.slider:before {
+    transform: translateX(46px);
+}
+
+.toggle-option {
+    opacity: 0.5;
+    transition: opacity 0.4s;
+}
+
+#mensalText {
+    opacity: 1;
+}
+
+.porcento {
+    background-color: #d9d9d92c;
+    border-radius: 20px;
+    color: #ff9100;
+    font-size: 18px;
+    font-weight: bold;
+    padding: 2px 10px;
+    margin-left: -5px;
+}
+
+.active-toggle {
+    opacity: 1 !important;
+}
+
+.inactive-toggle {
+    opacity: 0.5 !important;
+}
+
+.porcento {
+    background-color: #d9d9d92c;
+    border-radius: 20px;
+    color: var(--primeira-color);
+}
+
+.cards {
+    display: flex;
+    justify-content: center;
+    gap: 100px;
+    margin-top: 60px;
+}
+
+.plan-card {
+    width: 350px;
+    background: rgba(255, 255, 255, 0.10);
+    padding: 40px;
+    border-radius: 20px;
+    backdrop-filter: blur(10px);
+    border: 1px solid transparent;
+    transition: .3s;
+    z-index: 1;
+}
+
+.plan-card h3 {
+    color: white;
+    opacity: .70;
+    font-size: 20px;
+    margin-bottom: 20px;
+}
+
+.plan-card .SobConsulta {
+    font-size: 40px;
+}
+
+.plan-card p {
+    font-size: 48px;
+    font-weight: 700;
+    color: white;
+}
+
+.plan-card span {
+    color: var(--setima-color);
+}
+
+.price,
+span {
+    display: inline;
+}
+
+.plan-card ul {
+    margin-top: 25px;
+}
+
+.plan-card li {
+    font-family: Cinzel, sans-serif;
+    list-style: none;
+    color: white;
+    display: flex;
+    gap: 10px;
+    align-items: center;
+    margin: 8px 0;
+    opacity: .70;
+}
+
+.plan-card .aperte,
+.aperte2 {
+    margin-top: 40px;
+    width: 100%;
+    height: 45px;
+    border-radius: 8px;
+    border: 1px solid rgba(255, 255, 255, 0.5);
+    background: transparent;
+    color: white;
+    cursor: pointer;
+    transition: .2s;
+}
+
+.quero {
+    background: var(--primeira-color);
+    margin-top: 40px;
+    width: 100%;
+    height: 45px;
+    border-radius: 8px;
+    border: 1px solid rgba(255, 255, 255, 0.5);
+    color: white;
+    cursor: pointer;
+    transition: .2s;
+}
+
+.plan-card .quero:hover {
+    background: rgb(255, 145, 0);
+}
+
+.plan-card .aperte:hover {
+    background: rgba(255, 255, 255, 0.10);
+}
+
+.plan-card:nth-child(2) {
+    border: 2px solid var(--primeira-color);
+    position: relative;
+    top: -30px;
+    z-index: 10;
+}
+
+.recomendado {
+    background: var(--primeira-color);
+    color: white;
+    width: 140px;
+    height: 28px;
+    border-radius: 20px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    position: absolute;
+    top: -14px;
+    left: 50%;
+    transform: translateX(-50%);
+}
+
+.plan-card:hover {
+    transform: translateY(-8px);
+    box-shadow: 0 0 20px #00000030;
+}
+
+/*Dados*/
+
+.dados {
+    font-family: Cinzel, sans-serif;
+    align-items: center;
+    justify-content: center;
+    color: var(--quinta-color);
+    margin-top: 30px;
+    display: flex;
+    height: 230px;
+    background-color: #5A5C8050;
+}
+
+.textDados {
+    margin-left: 3vw;
+    margin-right: 5vw;
+}
+
+.dados h1 {
+    margin-bottom: 20px;
+    font-size: 30px;
+}
+
+.dados p {
+    font-size: 12px;
+    color: var(--setima-color);
+}
+
+.icons img {
+    margin: 20px;
+}
+
+/*formulario/Footer*/
+
+/*Formulario*/
+
+.footer {
+    margin-top: 30px;
+    height: 600px;
+    background-color: #5A5C8050;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    gap: 65px;
+    /*espaço entre a barra do meio*/
+}
+
+.footer h2 {
+    color: var(--quinta-color);
+    font-family: Cinzel, sans-serif;
+    margin-bottom: 20px;
+}
+
+.footer h6 {
+    color: #FFFFFF4f;
+    font-family: Cinzel, sans-serif;
+    margin-bottom: 35px;
+}
+
+.formulario {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    width: 400px;
+    margin: 0;
+}
+
+.form-wrapper {
+    max-width: 600px;
+    margin: 20px;
+}
+
+.form-wrapper img {
+    height: 30px;
+    width: 30px;
+}
+
+.input-box {
+    position: relative;
+    display: inline-block;
+    margin-bottom: 25px;
+    width: 49%;
+}
+
+.input-box.full {
+    width: 99%;
+}
+
+input,
+select {
+    width: 100%;
+    padding: 14px 18px;
+    border-radius: 8px;
+    border: none;
+    font-size: 15px;
+    background: #e5dde9;
+}
+
+.clear-btn {
+    width: 18px;
+    height: 18px;
+    position: absolute;
+    right: 10px;
+    top: 50%;
+    transform: translateY(-50%);
+    cursor: pointer;
+}
+
+.linha-vertical {
+    border-radius: 20px;
+    width: 2px;
+    height: 500px;
+    background: #7e7e7e;
+}
+
+.solicitar {
+    background-color: var(--primeira-color);
+    height: 50px;
+    width: 350px;
+    border: none;
+    border-radius: 10px;
+    font-size: 20px;
+    font-weight: bold;
+    color: #353438;
+}
+
+/*Contato*/
+
+.contatos {
+    text-align: left;
+    color: #ffffff;
+    padding: 40px 0;
+    width: fit-content;
+}
+
+.contatos .telefone,
+.contatos .email {
+    display: flex;
+    gap: 18px;
+    align-items: flex-start;
+    margin-bottom: 45px;
+}
+
+.cinza {
+    background-color: var(--setima-color);
+    padding: 10px;
+    border-radius: 4px;
+    display: flex;
+    width: 55px;
+    height: 55px;
+    justify-content: center;
+    align-items: center;
+}
+
+.contatos h2 {
+    font-family: Inter, sans-serif;
+    font-size: 20px;
+    font-weight: 800;
+    margin: 0 0 8px 0;
+}
+
+.contatos span {
+    font-family: Inter, sans-serif;
+    font-size: 14px;
+    color: #FFFFFF4f;
+}
+
+.linha-horizontal {
+    width: 100%;
+    max-width: 400px;
+    height: 2px;
+    background-color: #7e7e7e;
+    margin: 35px 0;
+    opacity: .4;
+    border-radius: 20px;
+}
+
+.logo2 {
+    display: flex;
+    gap: 12px;
+    align-items: center;
+    margin-bottom: 12px;
+}
+
+.logo2 img {
+    width: 40px;
+}
+
+.logo2 h2 {
+    font-family: Cinzel, sans-serif;
+    font-size: 24px;
+    font-weight: 600;
+    color: #FFFFFF4f;
+}
+
+.contatos>span:last-child {
+    font-size: 13px;
+    color: #FFFFFF4f;
+    line-height: 22px;
 }
