--- a/landing_page/css/style.css
+++ b/landing_page/css/style.css
@@ -4,14 +4,12 @@
     --terciaria-color: #40426f3b;
     --quarta-color: #1a1d58;
     --quinta-color: #FFFFFF;
-    --sexta-color: #F4F4F4;
-    --setima-color: #d9d9d9;
-    --oitava-color: #60628F;
-    --nona--color: #5A5C80;
-    --decima--color: #54556C;
+    --sexta-color: #d9d9d9;
 }
 
 /*Design para Desktop*/
+
+/*Estilizações globais*/
 
 html {
     scroll-behavior: smooth;
@@ -27,6 +25,14 @@ button {
 }
 
 button:active {
+    transform: scale(0.95);
+}
+
+a {
+    transition: transform .1s;
+}
+
+a:active {
     transform: scale(0.95);
 }
 
@@ -58,7 +64,6 @@ nav a {
     align-items: center;
     margin: 0 3vw;
     height: 100%;
-
 }
 
 nav a.empresa {
@@ -144,7 +149,7 @@ nav a.contaquitar {
     background-color: transparent;
     color: var(--quinta-color);
     font-family: Inter, sans-serif;
-    border: 2px solid white;
+    border: 2px solid var(--quinta-color);
 }
 
 .container {
@@ -262,7 +267,7 @@ nav a.contaquitar {
     justify-content: center;
     height: 60px;
     width: 60px;
-    background-color: var(--setima-color);
+    background-color: var(--sexta-color);
     border-radius: 50%;
 }
 
@@ -385,7 +390,7 @@ input:checked+.slider:before {
 }
 
 .plan-card h3 {
-    color: white;
+    color: var(--quinta-color);
     opacity: .70;
     font-size: 20px;
     margin-bottom: 20px;
@@ -398,11 +403,11 @@ input:checked+.slider:before {
 .plan-card p {
     font-size: 48px;
     font-weight: 700;
-    color: white;
+    color: var(--quinta-color);
 }
 
 .plan-card span {
-    color: var(--setima-color);
+    color: var(--sexta-color);
 }
 
 .price,
@@ -417,7 +422,7 @@ span {
 .plan-card li {
     font-family: Cinzel, sans-serif;
     list-style: none;
-    color: white;
+    color: var(--quinta-color);
     display: flex;
     gap: 10px;
     align-items: center;
@@ -433,7 +438,7 @@ span {
     border-radius: 8px;
     border: 1px solid rgba(255, 255, 255, 0.5);
     background: transparent;
-    color: white;
+    color: var(--quinta-color);
     cursor: pointer;
     transition: .2s;
 }
@@ -445,7 +450,7 @@ span {
     height: 45px;
     border-radius: 8px;
     border: 1px solid rgba(255, 255, 255, 0.5);
-    color: white;
+    color: var(--quinta-color);
     cursor: pointer;
     transition: .2s;
 }
@@ -467,7 +472,7 @@ span {
 
 .recomendado {
     background: var(--primeira-color);
-    color: white;
+    color: var(--quinta-color);
     width: 140px;
     height: 28px;
     border-radius: 20px;
@@ -510,7 +515,7 @@ span {
 
 .dados p {
     font-size: 12px;
-    color: var(--setima-color);
+    color: var(--sexta-color);
 }
 
 .icons img {
@@ -616,7 +621,7 @@ select {
 
 .contatos {
     text-align: left;
-    color: #ffffff;
+    color: var(--quinta-color);
     padding: 40px 0;
     width: fit-content;
 }
@@ -630,7 +635,7 @@ select {
 }
 
 .cinza {
-    background-color: var(--setima-color);
+    background-color: var(--sexta-color);
     padding: 10px;
     border-radius: 4px;
     display: flex;
