Alterando detalhes semanticos

--- a/landing_page/css/style.css
+++ b/landing_page/css/style.css
@@ -76,7 +76,7 @@ nav a.empresa {
     margin-left: 10px;
 }
 
-nav a.contaquitar {
+nav a.contactar {
     color: #353438;
     background-color: var(--primeira-color);
     height: 50px;
